# HPACellSegmentatorPortable

./: .gitignore  MANIFEST.in  README.md  config.yaml  generate_cell_crops.py  generate_masks.py  image_utils.py  process.py  pyproject.toml  requirements.txt
hpacellseg/: cellsegmentator.py  utils.py
hpacellsegmentator/: __init__.py  generate_cell_crops.py  generate_masks.py  image_utils.py  process.py
hpacellsegmentator/hpacellseg/: __main__.py  cellsegmentator.py
pytorch_zoo/: dpn.py  resnet38unet.py  unet.py
